--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.25)
-project(FactoryGame)
+project(RandomProjects)
 
 set(CMAKE_CXX_STANDARD 17)
 
@@ -7,6 +7,6 @@ find_package(SFML 2.5.1 COMPONENTS
         system window graphics network audio)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
-add_executable(FactoryGame main.cpp)
+add_executable(RandomProjects main.cpp)
 
-target_link_libraries(FactoryGame sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
+target_link_libraries(RandomProjects sfml-system sfml-window sfml-graphics sfml-network sfml-audio)
